--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="bundle.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.1/css/all.css">
 </head>
 <body>
     <div class="wrapper">
@@ -20,11 +21,45 @@
                     <li class="list__item">
                         <a href="#" class="item__link">About us</a>
                     </li>
-                    <li class="list__item">
-                        <a href="#" class="item__link">Services</a>
+                    <li class="list__item list__item--services">
+                        <a href="#" class="item__link">Services<i class="fa fa-chevron-down"></i></a>
+                        <ul class="services__list">
+                            <li class="sublist__item">
+                                <a href="" class="sublist__link">Web Design</a>
+                            </li>
+                            <li class="sublist__item">
+                                <a href="" class="sublist__link">Wordpress Design</a>
+                            </li>
+                            <li class="sublist__item">
+                                <a href="" class="sublist__link">Mobile App Development</a>
+                            </li>
+                            <li class="sublist__item">
+                                <a href="" class="sublist__link">Internet Marketing</a>
+                            </li>
+                            <li class="sublist__item">
+                                <a href="" class="sublist__link">Social Media Management</a>
+                            </li>
+                        </ul>
                     </li>
-                    <li class="list__item">
-                        <a href="#" class="item__link">Portfolio</a>
+                    <li class="list__item list__item--services">
+                        <a href="#" class="item__link ">Portfolio<i class="fa fa-chevron-down"></i></a>
+                        <ul class="services__list">
+                                <li class="sublist__item">
+                                    <a href="" class="sublist__link">Web Design</a>
+                                </li>
+                                <li class="sublist__item">
+                                    <a href="" class="sublist__link">Wordpress Design</a>
+                                </li>
+                                <li class="sublist__item">
+                                    <a href="" class="sublist__link">Mobile App Development</a>
+                                </li>
+                                <li class="sublist__item">
+                                    <a href="" class="sublist__link">Internet Marketing</a>
+                                </li>
+                                <li class="sublist__item">
+                                    <a href="" class="sublist__link">Social Media Management</a>
+                                </li>
+                            </ul>
                     </li>
                     <li class="list__item">
                         <a href="#" class="item__link">Blog</a>
