header & middle begin

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="bundle.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.1/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
@@ -70,8 +71,37 @@
                 </ul>
            </div>
         </nav>
-        <div class="header"></div>
-        <section class="middle"></section>
+        <header class="header">
+            <div class="header__slider view-port">
+                <img src="img/header_slide_3.png" alt="cup of coffe" class="sleder__img">
+                <div class="header__text">
+                        <h1 class="header__title">
+                        We design clean, crisp & memorable icons        
+                        </h1>
+                </div>
+                <div class="header__dots ">
+                    <div class="header__dot"></div>
+                    <div class="header__dot"></div>
+                    <div class="header__dot"></div>
+                    <div class="header__dot"></div>
+                    <div class="header__dot"></div>
+                </div>
+            </div>
+        </header>
+        <section class="middle">
+            <div class="middle__content">
+                <div class="middle__title">
+                    <div class="title__icon"></div>
+                    <h2 class="title__text">
+                        Clean theme
+                    </h2>    
+                </div>
+                <div class="middle__text">
+                    Ut nec lorem id orci convallis porta. Donec pharetra neque eu velit dictum molestie. Duis porta gravida augue sed viverra. Quisque at nulla leo, non aliquet mi. 
+                </div>
+                <a href="" class="middle__link"><i class="fa fa-angle-right"></i>Read More</a>
+            </div>
+        </section>
         <section class="latesWorks"></section>
         <section class="bottom"></section>
         <footer class="footer"></footer>
