--- a/public/index.html
+++ b/public/index.html
@@ -82,24 +82,62 @@
                 <div class="header__dots ">
                     <div class="header__dot"></div>
                     <div class="header__dot"></div>
-                    <div class="header__dot"></div>
+                    <div class="header__dot dotActive"></div>
                     <div class="header__dot"></div>
                     <div class="header__dot"></div>
                 </div>
             </div>
         </header>
         <section class="middle">
-            <div class="middle__content">
-                <div class="middle__title">
-                    <div class="title__icon"></div>
-                    <h2 class="title__text">
-                        Clean theme
-                    </h2>    
+            <div class="middle__container view-port">
+                <div class="middle__content">
+                    <div class="middle__title">
+                        <div class="title__icon"></div>
+                        <h2 class="title__text">
+                            Clean theme
+                        </h2>    
+                    </div>
+                    <div class="middle__text">
+                        Ut nec lorem id orci convallis porta. Donec pharetra neque eu velit dictum molestie. Duis porta gravida augue sed viverra. Quisque at nulla leo, non aliquet mi. 
+                    </div>
+                    <a href="" class="middle__link"><i class="fa fa-angle-right"></i>Read More</a>
                 </div>
-                <div class="middle__text">
-                    Ut nec lorem id orci convallis porta. Donec pharetra neque eu velit dictum molestie. Duis porta gravida augue sed viverra. Quisque at nulla leo, non aliquet mi. 
+                <div class="middle__content">
+                        <div class="middle__title">
+                            <div class="title__icon title__icon--rd"></div>
+                            <h2 class="title__text">
+                                responsive design
+                            </h2>    
+                        </div>
+                        <div class="middle__text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi euismod placerat dui et tincidunt. Sed sollicitudin posuere auctor. Phasellus at ultricies nisl. Integer at leo eros. 
+                        </div>
+                        <a href="" class="middle__link"><i class="fa fa-angle-right"></i>Read More</a>
                 </div>
-                <a href="" class="middle__link"><i class="fa fa-angle-right"></i>Read More</a>
+                <div class="middle__content">
+                            <div class="middle__title">
+                                <div class="title__icon title__icon--flp"></div>
+                                <h2 class="title__text">
+                                    Fully layerd psd
+                                </h2>    
+                            </div>
+                            <div class="middle__text">
+                                Phasellus lobortis metus non augue sodales volutpat. Vestibulum sit amet nibh eros, hendrerit venenatis est. In vitae nulla nec purus cursus pretium sed id magna.  
+                            </div>
+                            <a href="" class="middle__link"><i class="fa fa-angle-right"></i>Read More</a>
+                </div>
+                <div class="middle__content">
+                                <div class="middle__title">
+                                    <div class="title__icon title__icon--rfc"></div>
+                                    <h2 class="title__text">
+                                        Ready for coding
+                                    </h2>    
+                                </div>
+                                <div class="middle__text">
+                                    Vivamus convallis feugiat mauris sed posuere. Nam rutrum, quam quis euismod commodo, elit est porta quam, non placerat eros neque porta ante. Fusce quis odio urna.  
+                                </div>
+                                <a href="" class="middle__link"><i class="fa fa-angle-right"></i>Read More</a>
+                </div>
             </div>
         </section>
         <section class="latesWorks"></section>
