--- a/public/index.html
+++ b/public/index.html
@@ -140,8 +140,55 @@
                 </div>
             </div>
         </section>
-        <section class="latesWorks"></section>
-        <section class="bottom"></section>
+        <section class="bottom">
+           <div class="bottom__content view-port">
+                <div class="bottom__latest">
+                    <div class="bottom__title">
+                        <div class="title__icon"></div>
+                        <h2 class="title__text">
+                            Latest Works
+                        </h2>    
+                        <div class="lates__btn lates__btn--left"></div>
+                        <div class="lates__btn lates__btn--right"></div>
+                    </div> 
+                    <div class="latest__img"></div>
+                </div>
+                <div class="bottom__ourClients">
+                    <div class="bottom__testim">
+                        <div class="bottom__title">
+                            <div class="title__icon"></div>
+                            <h2 class="title__text">
+                                Testimonials
+                            </h2>    
+                        </div>
+                        <div class="testim__text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut nulla sapien, at aliquam erat. Sed vitae massa tellus. Aliquam commodo aliquam metus, sed iaculis nibh tempus id. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam nec nisi in nisl euismod fringilla.
+
+                        </div>
+                        <div class="testim__signature">
+                            John Travis, CEO, DomainName.com
+                        </div>
+                    </div>
+                    <div class="bottom__client">
+                        <div class="bottom__title">
+                            <div class="title__icon"></div>
+                            <h2 class="title__text">
+                                Our Clients
+                            </h2>    
+                        </div>
+                        <div class="client__logo">
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom__download">
+                    <div class="download__text">
+                        This is a clean and modern, four column website PSD template. You can code it into a Wordpress website, HTML5 responsive website for your personal or client works. So ahead and download this wonderful PSD template! 
+                    </div>
+                    <button class="download__btn"> <span class="download__icon">@</span> Download PSD</button>
+                </div>   
+           </div>
+        </section>
         <footer class="footer"></footer>
     </div>
 </html>
