--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@
         <section class="bottom">
            <div class="bottom__content view-port">
                 <div class="bottom__latest">
-                    <div class="bottom__title">
+                    <div class="bottom__title bottom__title--latest">
                         <div class="title__icon"></div>
                         <h2 class="title__text">
                             Latest Works
@@ -151,7 +151,12 @@
                         <div class="lates__btn lates__btn--left"></div>
                         <div class="lates__btn lates__btn--right"></div>
                     </div> 
+                    <div class="latest__gallery">
                     <div class="latest__img"></div>
+                    <div class="latest__img"></div>
+                    <div class="latest__img"></div>
+                    <div class="latest__img"></div>
+                    </div>
                 </div>
                 <div class="bottom__ourClients">
                     <div class="bottom__testim">
@@ -177,7 +182,12 @@
                             </h2>    
                         </div>
                         <div class="client__logo">
-                            
+                            <div class="client__client"></div>
+                            <div class="client__client"></div>
+                            <div class="client__client"></div>
+                            <div class="client__client"></div>
+                            <div class="client__client"></div>
+                            <div class="client__client"></div>
                         </div>
                     </div>
                 </div>
@@ -187,6 +197,7 @@
                     </div>
                     <button class="download__btn"> <span class="download__icon">@</span> Download PSD</button>
                 </div>   
+                <button class="download__btn"> <span class="download__icon">@</span> Download PSD</button>
            </div>
         </section>
         <footer class="footer"></footer>
