--- a/public/index.html
+++ b/public/index.html
@@ -197,9 +197,76 @@
                     </div>
                     <button class="download__btn"> <span class="download__icon">@</span> Download PSD</button>
                 </div>   
-                <button class="download__btn"> <span class="download__icon">@</span> Download PSD</button>
+                
            </div>
         </section>
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="footer__content view-port">
+                <div class="footer__about">
+                    <h2 class="footer__title">
+                        About Us
+                    </h2>  
+                    <div class="footer__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi euismod placerat dui et tincidunt. Sed sollicitudin posuere auctor. Phasellus at ultricies nisl. Integer at leo eros. Ut nec lorem id orci convallis porta. Donec pharetra neque eu velit dictum molestie. 
+                    </div>  
+                </div>
+                <div class="footer__explore">
+                    <h2 class="footer__title">
+                        Explore
+                    </h2>
+                    <ul class="footer__list">
+                        <li><a class="list__link" href="#">Home</a></li>
+                        <li><a class="list__link" href="#">About Us</a></li>
+                        <li><a class="list__link" href="#">Services</a></li>
+                        <li><a class="list__link" href="#">Portfolio</a></li>
+                        <li><a class="list__link" href="#">Blog</a></li>
+                    </ul>
+                </div>
+                <div class="footer__browse">
+                    <h2 class="footer__title">
+                        Browse
+                    </h2>
+                    <ul class="footer__list">
+                        <li><a class="list__link" href="#">Careers</a></li>
+                        <li><a class="list__link" href="#">Press and Media</a></li>
+                        <li><a class="list__link" href="#">Contact Us</a></li>
+                        <li><a class="list__link" href="#">Term of Service</a></li>
+                        <li><a class="list__link" href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="footer__contact">
+                    <h2 class="footer__title">
+                        Contact Us
+                    </h2>
+                    <div class="footer__adress">
+                        <p class="adress__text adress__text--bis">BisLite Inc.</p>
+                        <p class="adress__text">Always Street 265</p>
+                        <p class="adress__text">0X - 125 - Canada</p>
+                    </div>
+                    <div class="footer__tel">
+                        <p class="tel__text">Phone: 987-6543-210</p>
+                        <p class="tel__text">Fax: 987-6543-210</p>
+                    </div>
+                </div>
+                <div class="footer__connect">
+                    <h2 class="footer__title">
+                        Connect with Us
+                    </h2>
+                    <div class="footer__social">
+
+                    </div>
+                </div>
+                <div class="footer__footer">
+                    <div class="footer__copy">
+                        © Copyright 2012 - BisLite Inc. All rights reserved. Some free icons used here are created by Brankic1979.com. 
+                        Client Logos are copyright and trademark of the respective owners / companies. 
+                    </div>
+                    <div class="footer__logo">
+                        <a href="" class="content__logo"><span class="logo__bis">Bis</span><span class="logo__lite">Lite</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </html>
