bottom/footer icon

--- a/public/index.html
+++ b/public/index.html
@@ -144,12 +144,12 @@
            <div class="bottom__content view-port">
                 <div class="bottom__latest">
                     <div class="bottom__title bottom__title--latest">
-                        <div class="title__icon"></div>
+                        <div class="title__icon title__icon--latest"></div>
                         <h2 class="title__text">
                             Latest Works
                         </h2>    
-                        <div class="lates__btn lates__btn--left"></div>
-                        <div class="lates__btn lates__btn--right"></div>
+                        <div class="lates__btn lates__btn--left"><i class="fa fa-angle-left"></i></div>
+                        <div class="lates__btn lates__btn--right"><i class="fa fa-angle-right"></i></div>
                     </div> 
                     <div class="latest__gallery">
                     <div class="latest__img"></div>
@@ -161,7 +161,7 @@
                 <div class="bottom__ourClients">
                     <div class="bottom__testim">
                         <div class="bottom__title">
-                            <div class="title__icon"></div>
+                            <div class="title__icon title__icon--testim"></div>
                             <h2 class="title__text">
                                 Testimonials
                             </h2>    
@@ -176,18 +176,18 @@
                     </div>
                     <div class="bottom__client">
                         <div class="bottom__title">
-                            <div class="title__icon"></div>
+                            <div class="title__icon title__icon--client"></div>
                             <h2 class="title__text">
                                 Our Clients
                             </h2>    
                         </div>
                         <div class="client__logo">
-                            <div class="client__client"></div>
-                            <div class="client__client"></div>
-                            <div class="client__client"></div>
-                            <div class="client__client"></div>
-                            <div class="client__client"></div>
-                            <div class="client__client"></div>
+                            <div class="client__client client__client--one"></div>
+                            <div class="client__client client__client--two"></div>
+                            <div class="client__client client__client--three"></div>
+                            <div class="client__client client__client--four"></div>
+                            <div class="client__client client__client--five"></div>
+                            <div class="client__client client__client--six"></div>
                         </div>
                     </div>
                 </div>
@@ -253,7 +253,24 @@
                         Connect with Us
                     </h2>
                     <div class="footer__social">
-
+                        <a class="social__link" href="#">
+                            <div class="link__logo link__logo--fb"></div>
+                        </a>
+                        <a class="social__link" href="#">
+                            <div class="link__logo link__logo--bl"></div>
+                        </a>
+                        <a class="social__link" href="#">
+                            <div class="link__logo link__logo--pin"></div>
+                        </a>
+                        <a class="social__link" href="#">
+                            <div class="link__logo link__logo--li"></div>
+                        </a>
+                        <a class="social__link" href="#">
+                            <div class="link__logo link__logo--sk"></div>
+                        </a>
+                        <a class="social__link" href="#">
+                            <div class="link__logo link__logo--ws"></div>
+                        </a>                       
                     </div>
                 </div>
                 <div class="footer__footer">
