--- a/public/index.html
+++ b/public/index.html
@@ -269,7 +269,7 @@
                             <div class="link__logo link__logo--sk"></div>
                         </a>
                         <a class="social__link" href="#">
-                            <div class="link__logo link__logo--ws"></div>
+                            <div class="link__logo link__logo--sh"></div>
                         </a>                       
                     </div>
                 </div>
